Add sections to blog

--- a/src/app/posts/iterators.mdx
+++ b/src/app/posts/iterators.mdx
@@ -3,6 +3,7 @@ date: "2023-02-01"
 title: "Iterating Through Trees In Rust"
 excerpt: "Discussion on implementing iterators for tree-like data structures."
 tags: ["Rust", "Iterators", "Trees"]
+category: "general"
 ---
 
 ## Introduction
