--- a/src/app/posts/end-to-end-testing.mdx
+++ b/src/app/posts/end-to-end-testing.mdx
@@ -61,5 +61,5 @@ tradeoffs, we only run tests that are relevant to the code we change, removing t
 every time we run the CI process. And we adapted our seeding API that we use for production and staging environments to
 also be used in the tests, keeping the test data consistent.
 
-While this approach has solved the issues regarding tool use, we can already see the infrastructure problems that lie 
+While this approach has overcome the issues regarding tool use, we can already see the infrastructure problems that lie 
 ahead... 
