Allow for Spanish translations

--- a/src/app/posts/ephemeral-environments.mdx
+++ b/src/app/posts/ephemeral-environments.mdx
@@ -3,6 +3,7 @@ date: '2025-11-05'
 title: 'Ephemeral Environments'
 tags: ['Testing', 'Infrastructure', 'En Punto']
 category: 'dev-diary'
+language: 'en'
 ---
 
 The last blog post was left on a bit of cliffhanger because even though we had solved the issues with 
