--- a/src/app/posts/iterators.mdx
+++ b/src/app/posts/iterators.mdx
@@ -4,6 +4,7 @@ title: 'Iterating Through Trees In Rust'
 excerpt: 'Discussion on implementing iterators for tree-like data structures.'
 tags: ['Rust', 'Iterators', 'Trees']
 category: 'general'
+language: 'en'
 ---
 
 ## Introduction
