--- a/src/app/posts/end-to-end-testing.mdx
+++ b/src/app/posts/end-to-end-testing.mdx
@@ -3,6 +3,7 @@ date: '2025-11-03'
 title: 'Solving End-to-End Testing Issues at En Punto'
 tags: ['Testing', 'End-to-End Testing', 'En Punto']
 category: 'dev-diary'
+language: 'en'
 ---
 
 ## Introduction
